@@ -162,4 +162,5 @@ return [
     'L_WANT_HIDE' => 'Are you really want to hide',
     'L_COMMON_LISTS' => 'Common lists (by algs)',
     'L_USERS_LISTS' => 'User`s lists',
+    'L_STAT_BY_ALGS' => 'Statistic by algs',
 ];
