@@ -164,4 +164,5 @@ return [
     'L_WANT_HIDE' => 'Вы действительно хотите скрыть',
     'L_COMMON_LISTS' => 'Общие листы (по алгоритмам)',
     'L_USERS_LISTS' => 'Пользовательские листы',
+    'L_STAT_BY_ALGS' => 'Статистика по алгоритмам',
 ];
